# next_gen

./: .gitignore  CMakeLists.txt  Directory.Build.props  NextGen.sln  README.md  vcpkg-configuration.json  vcpkg.json
NextGenLib/: NextGenLib.props  NextGenLib.vcxproj
examples/: Examples.vcxproj  basic_service_example.cpp  message_queue_example.cpp  simple_message_queue_example.cpp  timer_example.cpp
include/core/: config.h  service.h
include/message/: message.h  message_queue.h
include/module/: module.h  module_impl.h  module_interface.h
include/network/: asio_wrapper.h  net_service.h  tcp_service.h  tcp_session.h  udp_service.h
include/next_gen/core/: config.h  service.h
include/next_gen/message/: message.h  message_queue.h
include/next_gen/module/: module.h
include/next_gen/network/: net_service.h
include/next_gen/utils/: error.h  logger.h  timer.h
include/utils/: error.h  logger.h  timer.h
message/: CMakeLists.txt  CMakeSettings.json  NextGenMessage.sln  README.md  VS_README.md
message/definition/: MsgItem.lua  MsgLogin.lua
message/generator/: generator.cpp  generator.h  generator_impl.cpp  template_engine.cpp  template_engine.h
message/generator/templates/: factory_registration.template  legacy_adapters.template  message_header.template  message_source.template
message/include/: message_base.h  message_factory.h  types.h
message/include/legacy/: adapter.h
message/projects/: MessageCore.vcxproj  MessageGenerator.vcxproj  Messages.vcxproj  MsgGen.vcxproj
message/tools/: msggen.cpp
src/core/: service.cpp
src/message/: lock_free_message_queue.cpp  message_queue.cpp  priority_compare.cpp
src/module/: module.cpp
src/network/: net_service.cpp  tcp_service.cpp  tcp_session.cpp  udp_service.cpp
src/utils/: logger.cpp  timer.cpp  timer_manager.cpp
